--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,35 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-row align-items-center justify-content-center>
+      <ion-col col-auto margin-right>Sort by:</ion-col>
+      <ion-col col-auto>
+        <div class="carbon-dropdown">
+          <select ion-col outline [(ngModel)]="sortby"
+            (change)="sortCards()">
+            <option *ngFor="let item of sortByData" [value]="item.key">
+              {{ item.value }}</option>
+          </select>
+        </div>
+      </ion-col>
+    </ion-row>
+  <ion-grid>
+    <ion-row *ngIf="pageCards && pageCards.length > 0" justify-content-center>
+      <ion-col col-12 col-sm-auto no-padding *ngFor="let item of pageCards">
+          <ion-card no-padding>
+              <img *ngIf="item.showBridge" src="../../assets/imgs/wide_ggbridge_bg_teneax.jpg">
+              <img *ngIf="!item.showBridge" src="../../assets/imgs/darktiles_bg_gike55.jpg">
+              <img *ngIf="!item.showBridge" class="overlap" src="../../assets/imgs/place_holder_zuvywg.png">
+              <ion-card-content>
+                <ion-card-title no-margin text-wrap>{{item.Heading}}</ion-card-title>
+                <p>{{item.Subheading}}</p>
+              </ion-card-content>
+              <ion-row class="price">
+                <ion-col>
+                    {{item.Price | currency:'USD':'symbol':'2.2-4'}}
+                </ion-col>
+              </ion-row>
+          </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <pagination [data]="cards" [page]="page" [itemsPerPage]="itemsPerPage" (paginationChange)="pageChange($event)"></pagination>
 </ion-content>
