currency section- add top border

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,7 +23,7 @@
                 <p>{{item.Subheading}}</p>
               </ion-card-content>
               <ion-row class="price">
-                <ion-col>
+                <ion-col text-right>
                     {{item.Price | currency:'USD':'symbol':'2.2-4'}}
                 </ion-col>
               </ion-row>
